# FileCompressionTool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BinaryReader.h  Compressor.h  Decompressor.h  FileManager.h  FrequencyCounter.h  HuffmanTree.h  Statistics.h
input/: sample.txt
output/: compressed.huff
src/: BinaryWriter.cpp  Compressor.cpp  Decompressor.cpp  FileManager.cpp  FrequencyCounter.cpp  HuffmanTree.cpp  Statistics.cpp  main.cpp
tests/: pointer_demo.cpp
